# designless-npm

./: .gitignore  README.md
.github/workflows/: ci.yml  publish-cdn.yml
annotate/: README.md  package-lock.json  package.json  vitest.config.mjs
annotate/.cargo/: config.toml
annotate/src/: astro.js  babel.js  contract.js  gating.js  index.js  next.js  qwik.js  splice-markers.js  svelte.js  vue.js
annotate/swc-plugin/: Cargo.toml  annotate.wasm
annotate/swc-plugin/src/: lib.rs
annotate/test/: astro.test.js  babel.test.js  contract.test.js  next.test.js  qwik.test.js  svelte.test.js  swc.test.js  vue.test.js
cdn/: README.md
cdn/annotate/: capabilities.v1.json
create-designless/: README.md  package-lock.json  package.json
create-designless/src/: capabilities.js  detect.js  doctor.js  wire.js
create-designless/test/: detect-matrix.test.js  initializer.test.js
dev-auth/: README.md  package-lock.json  package.json  vitest.config.mjs
dev-auth/src/: contract.js  express.js  gate.js  guard.js  index.js  next.js  nuxt.js  svelte.js
dev-auth/test/: contract.test.js  express.test.js  gate.test.js  guard.test.js  next.test.js  nuxt.test.js  svelte.test.js
